@@ -1,5 +1,5 @@
 /**
- * Copyright (c) 2010-2019 Contributors to the openHAB project
+ * Copyright (c) 2010-2021 Contributors to the openHAB project
  *
  * See the NOTICE file(s) distributed with this work for additional
  * information.
@@ -33,13 +33,10 @@ import javax.xml.stream.XMLStreamException;
 import javax.xml.stream.XMLStreamReader;
 import javax.xml.stream.util.StreamReaderDelegate;
 
-import org.apache.commons.io.IOUtils;
-import org.apache.commons.lang.StringUtils;
 import org.eclipse.jdt.annotation.Nullable;
 import org.eclipse.jetty.client.HttpClient;
 import org.eclipse.jetty.client.api.Response;
 import org.eclipse.jetty.client.api.Result;
-import org.eclipse.smarthome.io.net.http.HttpUtil;
 import org.openhab.binding.denonmarantz.internal.DenonMarantzState;
 import org.openhab.binding.denonmarantz.internal.config.DenonMarantzConfiguration;
 import org.openhab.binding.denonmarantz.internal.connector.DenonMarantzConnector;
@@ -51,6 +48,7 @@ import org.openhab.binding.denonmarantz.internal.xml.entities.commands.AppComman
 import org.openhab.binding.denonmarantz.internal.xml.entities.commands.AppCommandResponse;
 import org.openhab.binding.denonmarantz.internal.xml.entities.commands.CommandRx;
 import org.openhab.binding.denonmarantz.internal.xml.entities.commands.CommandTx;
+import org.openhab.core.io.net.http.HttpUtil;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
@@ -169,7 +167,7 @@ public class DenonMarantzHttpConnector extends DenonMarantzConnector {
     @Override
     protected void internalSendCommand(String command) {
         logger.debug("Sending command '{}'", command);
-        if (StringUtils.isBlank(command)) {
+        if (command == null || command.isBlank()) {
             logger.warn("Trying to send empty command");
             return;
         }
@@ -245,6 +243,12 @@ public class DenonMarantzHttpConnector extends DenonMarantzConnector {
                         state.setZone3Mute(zoneSecondary.getMute().getValue());
                         state.setZone3Input(zoneSecondary.getInputFuncSelect().getValue());
                         break;
+                    case 4:
+                        state.setZone4Power(zoneSecondary.getPower().getValue());
+                        state.setZone4Volume(zoneSecondary.getMasterVolume().getValue());
+                        state.setZone4Mute(zoneSecondary.getMute().getValue());
+                        state.setZone4Input(zoneSecondary.getInputFuncSelect().getValue());
+                        break;
                 }
             }
         }
@@ -300,10 +304,13 @@ public class DenonMarantzHttpConnector extends DenonMarantzConnector {
             String result = HttpUtil.executeUrl("GET", uri, REQUEST_TIMEOUT_MS);
             logger.trace("result of getDocument for uri '{}':\r\n{}", uri, result);
 
-            if (StringUtils.isNotBlank(result)) {
+            if (result != null && !result.isBlank()) {
                 JAXBContext jc = JAXBContext.newInstance(response);
                 XMLInputFactory xif = XMLInputFactory.newInstance();
-                XMLStreamReader xsr = xif.createXMLStreamReader(IOUtils.toInputStream(result));
+                xif.setProperty(XMLInputFactory.IS_SUPPORTING_EXTERNAL_ENTITIES, false);
+                xif.setProperty(XMLInputFactory.SUPPORT_DTD, false);
+                XMLStreamReader xsr = xif
+                        .createXMLStreamReader(new ByteArrayInputStream(result.getBytes(StandardCharsets.UTF_8)));
                 xsr = new PropertyRenamerDelegate(xsr);
 
                 @SuppressWarnings("unchecked")
@@ -333,11 +340,12 @@ public class DenonMarantzHttpConnector extends DenonMarantzConnector {
             ByteArrayInputStream inputStream = new ByteArrayInputStream(sw.toString().getBytes(StandardCharsets.UTF_8));
             String result = HttpUtil.executeUrl("POST", uri, inputStream, CONTENT_TYPE_XML, REQUEST_TIMEOUT_MS);
 
-            if (StringUtils.isNotBlank(result)) {
+            if (result != null && !result.isBlank()) {
                 JAXBContext jcResponse = JAXBContext.newInstance(response);
 
                 @SuppressWarnings("unchecked")
-                T obj = (T) jcResponse.createUnmarshaller().unmarshal(IOUtils.toInputStream(result));
+                T obj = (T) jcResponse.createUnmarshaller()
+                        .unmarshal(new ByteArrayInputStream(result.getBytes(StandardCharsets.UTF_8)));
 
                 return obj;
             }
@@ -356,13 +364,12 @@ public class DenonMarantzHttpConnector extends DenonMarantzConnector {
 
         @Override
         public String getAttributeLocalName(int index) {
-            return Introspector.decapitalize(super.getAttributeLocalName(index));
+            return Introspector.decapitalize(super.getAttributeLocalName(index)).intern();
         }
 
         @Override
         public String getLocalName() {
-            return Introspector.decapitalize(super.getLocalName());
+            return Introspector.decapitalize(super.getLocalName()).intern();
         }
     }
-
 }
