@@ -1,5 +1,5 @@
 /**
- * Copyright (c) 2010-2019 Contributors to the openHAB project
+ * Copyright (c) 2010-2021 Contributors to the openHAB project
  *
  * See the NOTICE file(s) distributed with this work for additional
  * information.
@@ -25,20 +25,6 @@ import java.util.Set;
 import java.util.concurrent.ScheduledFuture;
 import java.util.concurrent.TimeUnit;
 
-import org.apache.commons.lang.StringUtils;
-import org.eclipse.smarthome.config.core.Configuration;
-import org.eclipse.smarthome.core.library.types.DecimalType;
-import org.eclipse.smarthome.core.thing.Bridge;
-import org.eclipse.smarthome.core.thing.ChannelUID;
-import org.eclipse.smarthome.core.thing.Thing;
-import org.eclipse.smarthome.core.thing.ThingStatus;
-import org.eclipse.smarthome.core.thing.ThingStatusDetail;
-import org.eclipse.smarthome.core.thing.ThingTypeUID;
-import org.eclipse.smarthome.core.thing.binding.BaseBridgeHandler;
-import org.eclipse.smarthome.core.thing.binding.ThingHandler;
-import org.eclipse.smarthome.core.thing.binding.builder.ThingStatusInfoBuilder;
-import org.eclipse.smarthome.core.types.Command;
-import org.eclipse.smarthome.core.types.RefreshType;
 import org.openhab.binding.digitalstrom.internal.DigitalSTROMBindingConstants;
 import org.openhab.binding.digitalstrom.internal.lib.climate.jsonresponsecontainer.impl.TemperatureControlStatus;
 import org.openhab.binding.digitalstrom.internal.lib.config.Config;
@@ -67,6 +53,18 @@ import org.openhab.binding.digitalstrom.internal.lib.structure.devices.devicepar
 import org.openhab.binding.digitalstrom.internal.lib.structure.devices.deviceparameters.constants.MeteringUnitsEnum;
 import org.openhab.binding.digitalstrom.internal.lib.structure.scene.InternalScene;
 import org.openhab.binding.digitalstrom.internal.providers.DsChannelTypeProvider;
+import org.openhab.core.config.core.Configuration;
+import org.openhab.core.library.types.DecimalType;
+import org.openhab.core.thing.Bridge;
+import org.openhab.core.thing.ChannelUID;
+import org.openhab.core.thing.Thing;
+import org.openhab.core.thing.ThingStatus;
+import org.openhab.core.thing.ThingStatusDetail;
+import org.openhab.core.thing.ThingTypeUID;
+import org.openhab.core.thing.binding.BaseBridgeHandler;
+import org.openhab.core.thing.binding.ThingHandler;
+import org.openhab.core.types.Command;
+import org.openhab.core.types.RefreshType;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
@@ -199,9 +197,10 @@ public class BridgeHandler extends BaseBridgeHandler
             if (versions != null) {
                 properties.putAll(versions);
             }
-            if (StringUtils.isBlank(getThing().getProperties().get(DigitalSTROMBindingConstants.SERVER_CERT))
-                    && StringUtils.isNotBlank(config.getCert())) {
-                properties.put(DigitalSTROMBindingConstants.SERVER_CERT, config.getCert());
+            String certProperty = getThing().getProperties().get(DigitalSTROMBindingConstants.SERVER_CERT);
+            String certConfig = config.getCert();
+            if ((certProperty == null || certProperty.isBlank()) && (certConfig != null && !certConfig.isBlank())) {
+                properties.put(DigitalSTROMBindingConstants.SERVER_CERT, certConfig);
             }
             logger.debug("update properties");
             updateProperties(properties);
@@ -236,8 +235,12 @@ public class BridgeHandler extends BaseBridgeHandler
     }
 
     private boolean checkLoginConfig(Config config) {
-        if ((StringUtils.isNotBlank(config.getUserName()) && StringUtils.isNotBlank(config.getPassword()))
-                || StringUtils.isNotBlank(config.getAppToken())) {
+        String userName = config.getUserName();
+        String password = config.getPassword();
+        String appToken = config.getAppToken();
+
+        if (((userName != null && !userName.isBlank()) && (password != null && !password.isBlank()))
+                || (appToken != null && !appToken.isBlank())) {
             return true;
         }
         onConnectionStateChange(CONNECTION_LOST, NO_USER_PASSWORD);
@@ -251,7 +254,7 @@ public class BridgeHandler extends BaseBridgeHandler
             return null;
         }
         logger.debug("Loading configuration");
-        ArrayList<String> numberExc = new ArrayList<String>();
+        List<String> numberExc = new ArrayList<>();
         // Parameters can't be null, because of an existing default value.
         if (thingConfig.get(DigitalSTROMBindingConstants.SENSOR_DATA_UPDATE_INTERVAL) instanceof BigDecimal) {
             config.setSensordataRefreshInterval(
@@ -297,8 +300,9 @@ public class BridgeHandler extends BaseBridgeHandler
             updateStatus(ThingStatus.OFFLINE, ThingStatusDetail.CONFIGURATION_ERROR, excText + " have to be a number.");
             return null;
         }
-        if (StringUtils.isNotBlank(getThing().getProperties().get(DigitalSTROMBindingConstants.SERVER_CERT))) {
-            config.setCert(getThing().getProperties().get(DigitalSTROMBindingConstants.SERVER_CERT));
+        String servertCert = getThing().getProperties().get(DigitalSTROMBindingConstants.SERVER_CERT);
+        if (servertCert != null && !servertCert.isBlank()) {
+            config.setCert(servertCert);
         }
         return config;
     }
@@ -308,8 +312,9 @@ public class BridgeHandler extends BaseBridgeHandler
             this.config = new Config();
         }
         // load and check connection and authorization data
-        if (StringUtils.isNotBlank((String) thingConfig.get(HOST))) {
-            config.setHost(thingConfig.get(HOST).toString());
+        String host = (String) thingConfig.get(HOST);
+        if (host != null && !host.isBlank()) {
+            config.setHost(host);
         } else {
             updateStatus(ThingStatus.OFFLINE, ThingStatusDetail.CONFIGURATION_ERROR,
                     "The connection to the digitalSTROM-Server can't established, because the host address is missing. Please set the host address.");
@@ -367,14 +372,8 @@ public class BridgeHandler extends BaseBridgeHandler
 
     @Override
     public void handleRemoval() {
-        for (Thing thing : getThing().getThings()) {
-            // Inform Thing-Child's about removed bridge.
-            final ThingHandler thingHandler = thing.getHandler();
-            if (thingHandler != null) {
-                thingHandler.bridgeStatusChanged(ThingStatusInfoBuilder.create(ThingStatus.REMOVED).build());
-            }
-        }
-        if (StringUtils.isNotBlank((String) super.getConfig().get(APPLICATION_TOKEN))) {
+        String applicationToken = (String) super.getConfig().get(APPLICATION_TOKEN);
+        if (applicationToken != null && !applicationToken.isEmpty()) {
             if (connMan == null) {
                 Config config = loadAndCheckConnectionData(this.getConfig());
                 if (config != null) {
@@ -549,13 +548,13 @@ public class BridgeHandler extends BaseBridgeHandler
                 return;
             case CONNECTION_RESUMED:
                 if (connectionTimeoutCounter > 0) {
+                    // reset connection timeout counter
+                    connectionTimeoutCounter = 0;
                     if (connMan.checkConnection()) {
                         restartServices();
                         setStatus(ThingStatus.ONLINE);
                     }
                 }
-                // reset connection timeout counter
-                connectionTimeoutCounter = 0;
                 return;
             case APPLICATION_TOKEN_GENERATED:
                 if (connMan != null) {
@@ -668,7 +667,16 @@ public class BridgeHandler extends BaseBridgeHandler
                 case INVALID_URL:
                     updateStatus(ThingStatus.OFFLINE, ThingStatusDetail.CONFIGURATION_ERROR, "Invalid URL is set.");
                     break;
+                case CONNECTION_LOST:
+                    updateStatus(ThingStatus.OFFLINE, ThingStatusDetail.COMMUNICATION_ERROR,
+                            "IOException / Connection lost.");
+                    break;
+                case SSL_HANDSHAKE_ERROR:
+                    updateStatus(ThingStatus.OFFLINE, ThingStatusDetail.COMMUNICATION_ERROR,
+                            "SSL Handshake error / Connection lost.");
+                    break;
                 default:
+                    updateStatus(ThingStatus.OFFLINE, ThingStatusDetail.COMMUNICATION_ERROR, reason);
             }
             // reset connection timeout counter
             connectionTimeoutCounter = 0;
@@ -683,7 +691,7 @@ public class BridgeHandler extends BaseBridgeHandler
      */
     public List<Device> getDevices() {
         return this.structMan != null && this.structMan.getDeviceMap() != null
-                ? new LinkedList<Device>(this.structMan.getDeviceMap().values())
+                ? new LinkedList<>(this.structMan.getDeviceMap().values())
                 : null;
     }
 
@@ -728,7 +736,7 @@ public class BridgeHandler extends BaseBridgeHandler
      * @return Scene list (cannot be null)
      */
     public List<InternalScene> getScenes() {
-        return sceneMan != null ? sceneMan.getScenes() : new LinkedList<InternalScene>();
+        return sceneMan != null ? sceneMan.getScenes() : new LinkedList<>();
     }
 
     /**
@@ -792,7 +800,7 @@ public class BridgeHandler extends BaseBridgeHandler
     public List<Circuit> getCircuits() {
         logger.debug("circuits: {}", structMan.getCircuitMap().values().toString());
         return structMan != null && structMan.getCircuitMap() != null
-                ? new LinkedList<Circuit>(structMan.getCircuitMap().values())
+                ? new LinkedList<>(structMan.getCircuitMap().values())
                 : null;
     }
 
@@ -838,7 +846,6 @@ public class BridgeHandler extends BaseBridgeHandler
      * @return all temperature control status objects
      */
     public Collection<TemperatureControlStatus> getTemperatureControlStatusFromAllZones() {
-        return tempContMan != null ? tempContMan.getTemperatureControlStatusFromAllZones()
-                : new LinkedList<TemperatureControlStatus>();
+        return tempContMan != null ? tempContMan.getTemperatureControlStatusFromAllZones() : new LinkedList<>();
     }
 }
