@@ -1,5 +1,5 @@
 /**
- * Copyright (c) 2010-2019 Contributors to the openHAB project
+ * Copyright (c) 2010-2021 Contributors to the openHAB project
  *
  * See the NOTICE file(s) distributed with this work for additional
  * information.
@@ -16,10 +16,11 @@ import java.util.Collections;
 import java.util.LinkedList;
 import java.util.List;
 
-import org.apache.commons.lang.StringUtils;
 import org.openhab.binding.digitalstrom.internal.lib.listener.SceneStatusListener;
 import org.openhab.binding.digitalstrom.internal.lib.structure.devices.Device;
 import org.openhab.binding.digitalstrom.internal.lib.structure.scene.constants.SceneTypes;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 
 /**
  * The {@link InternalScene} represents a digitalSTROM-Scene for the internal model.
@@ -28,6 +29,7 @@ import org.openhab.binding.digitalstrom.internal.lib.structure.scene.constants.S
  * @author Matthias Siegele - Initial contribution
  */
 public class InternalScene {
+    private final Logger logger = LoggerFactory.getLogger(InternalScene.class);
 
     private final Short sceneID;
     private final Short groupID;
@@ -38,7 +40,7 @@ public class InternalScene {
     private boolean deviceHasChanged = false;
     private String sceneType = SceneTypes.GROUP_SCENE;
 
-    private List<Device> devices = Collections.synchronizedList(new LinkedList<Device>());
+    private List<Device> devices = Collections.synchronizedList(new LinkedList<>());
     private SceneStatusListener listener;
 
     /**
@@ -68,7 +70,7 @@ public class InternalScene {
             this.zoneID = zoneID;
         }
         this.internalSceneID = this.zoneID + "-" + this.groupID + "-" + this.sceneID;
-        if (StringUtils.isBlank(sceneName)) {
+        if (sceneName == null || sceneName.isBlank()) {
             this.sceneName = this.internalSceneID;
         } else {
             this.sceneName = sceneName;
@@ -91,14 +93,13 @@ public class InternalScene {
      * Activates this Scene.
      */
     public void activateScene() {
-        if (!active) {
-            this.active = true;
-            deviceHasChanged = false;
-            informListener();
-            if (this.devices != null) {
-                for (Device device : this.devices) {
-                    device.callInternalScene(this);
-                }
+        logger.debug("activate scene: {}", this.getSceneName());
+        this.active = true;
+        deviceHasChanged = false;
+        informListener();
+        if (this.devices != null) {
+            for (Device device : this.devices) {
+                device.callInternalScene(this);
             }
         }
     }
@@ -107,6 +108,7 @@ public class InternalScene {
      * Deactivates this Scene.
      */
     public void deactivateScene() {
+        logger.debug("deactivate scene: {}", this.getSceneName());
         if (active) {
             this.active = false;
             deviceHasChanged = false;
@@ -123,6 +125,7 @@ public class InternalScene {
      * Will be called by a device, if an undo call of an other scene activated this scene.
      */
     public void activateSceneByDevice() {
+        logger.debug("activate scene by device: {}", this.getSceneName());
         if (!active && !deviceHasChanged) {
             this.active = true;
             deviceHasChanged = false;
@@ -134,6 +137,7 @@ public class InternalScene {
      * Will be called by a device, if an call of an other scene deactivated this scene.
      */
     public void deactivateSceneByDevice() {
+        logger.debug("deactivate scene by device: {}", this.getSceneName());
         if (active) {
             this.active = false;
             deviceHasChanged = false;
@@ -157,8 +161,11 @@ public class InternalScene {
     }
 
     private void informListener() {
+        logger.debug("inform listener: {}", this.getSceneName());
         if (this.listener != null) {
             listener.onSceneStateChanged(this.active);
+        } else {
+            logger.debug("no listener found for scene: {}", this.getSceneName());
         }
     }
 
@@ -230,7 +237,6 @@ public class InternalScene {
      */
     public List<Device> getDeviceList() {
         return this.devices;
-
     }
 
     /**
@@ -329,7 +335,6 @@ public class InternalScene {
         this.listener = listener;
         this.listener.onSceneAdded(this);
         checkDeviceSceneConfig();
-
     }
 
     /**
