@@ -1,5 +1,5 @@
 /**
- * Copyright (c) 2010-2019 Contributors to the openHAB project
+ * Copyright (c) 2010-2021 Contributors to the openHAB project
  *
  * See the NOTICE file(s) distributed with this work for additional
  * information.
@@ -14,32 +14,31 @@ package org.openhab.binding.enocean.internal.handler;
 
 import static org.openhab.binding.enocean.internal.EnOceanBindingConstants.*;
 
-import java.util.Arrays;
 import java.util.Collection;
 import java.util.Collections;
-import java.util.HashSet;
 import java.util.Set;
 import java.util.concurrent.ScheduledFuture;
 import java.util.concurrent.TimeUnit;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
-import org.eclipse.smarthome.config.core.Configuration;
-import org.eclipse.smarthome.core.thing.Channel;
-import org.eclipse.smarthome.core.thing.ChannelUID;
-import org.eclipse.smarthome.core.thing.Thing;
-import org.eclipse.smarthome.core.thing.ThingStatus;
-import org.eclipse.smarthome.core.thing.ThingTypeUID;
-import org.eclipse.smarthome.core.thing.link.ItemChannelLinkRegistry;
-import org.eclipse.smarthome.core.thing.type.ChannelTypeUID;
-import org.eclipse.smarthome.core.types.Command;
-import org.eclipse.smarthome.core.types.RefreshType;
-import org.eclipse.smarthome.core.util.HexUtils;
 import org.openhab.binding.enocean.internal.config.EnOceanActuatorConfig;
 import org.openhab.binding.enocean.internal.eep.EEP;
 import org.openhab.binding.enocean.internal.eep.EEPFactory;
 import org.openhab.binding.enocean.internal.eep.EEPType;
-import org.openhab.binding.enocean.internal.messages.ESP3Packet;
+import org.openhab.binding.enocean.internal.messages.BasePacket;
+import org.openhab.core.config.core.Configuration;
+import org.openhab.core.library.types.OnOffType;
+import org.openhab.core.thing.Channel;
+import org.openhab.core.thing.ChannelUID;
+import org.openhab.core.thing.Thing;
+import org.openhab.core.thing.ThingStatus;
+import org.openhab.core.thing.ThingTypeUID;
+import org.openhab.core.thing.link.ItemChannelLinkRegistry;
+import org.openhab.core.thing.type.ChannelTypeUID;
+import org.openhab.core.types.Command;
+import org.openhab.core.types.RefreshType;
+import org.openhab.core.util.HexUtils;
 
 /**
  *
@@ -50,8 +49,9 @@ import org.openhab.binding.enocean.internal.messages.ESP3Packet;
 public class EnOceanBaseActuatorHandler extends EnOceanBaseSensorHandler {
 
     // List of thing types which support sending of eep messages
-    public final static Set<ThingTypeUID> SUPPORTED_THING_TYPES = new HashSet<>(Arrays.asList(THING_TYPE_CENTRALCOMMAND,
-            THING_TYPE_MEASUREMENTSWITCH, THING_TYPE_GENERICTHING, THING_TYPE_ROLLERSHUTTER, THING_TYPE_THERMOSTAT));
+    public static final Set<ThingTypeUID> SUPPORTED_THING_TYPES = Set.of(THING_TYPE_CENTRALCOMMAND,
+            THING_TYPE_MEASUREMENTSWITCH, THING_TYPE_GENERICTHING, THING_TYPE_ROLLERSHUTTER, THING_TYPE_THERMOSTAT,
+            THING_TYPE_HEATRECOVERYVENTILATION);
 
     protected byte[] senderId; // base id of bridge + senderIdOffset, used for sending msg
     protected byte[] destinationId; // in case of broadcast FFFFFFFF otherwise the enocean id of the device
@@ -69,13 +69,12 @@ public class EnOceanBaseActuatorHandler extends EnOceanBaseSensorHandler {
      * @param senderIdOffset to be validated
      * @return true if senderIdOffset is between ]0;128[ and is not used yet
      */
-    private boolean validateSenderIdOffset(int senderIdOffset) {
-        if (senderIdOffset == -1) {
+    private boolean validateSenderIdOffset(Integer senderIdOffset) {
+        if (senderIdOffset == null) {
             return true;
         }
 
         if (senderIdOffset > 0 && senderIdOffset < 128) {
-
             EnOceanBridgeHandler bridgeHandler = getBridgeHandler();
             if (bridgeHandler != null) {
                 return !bridgeHandler.existsSender(senderIdOffset, this.thing);
@@ -100,24 +99,23 @@ public class EnOceanBaseActuatorHandler extends EnOceanBaseSensorHandler {
         if (sendingEEPType == null) {
             return r;
         }
-        
-        return Collections.unmodifiableCollection(Stream.concat(r.stream(), Collections.singletonList(sendingEEPType).stream()).collect(Collectors.toList()));
+
+        return Collections.unmodifiableCollection(Stream
+                .concat(r.stream(), Collections.singletonList(sendingEEPType).stream()).collect(Collectors.toList()));
     }
 
     @Override
     boolean validateConfig() {
-        
         EnOceanActuatorConfig config = getConfiguration();
-        if(config == null) {
+        if (config == null) {
             configurationErrorDescription = "Configuration is not valid";
             return false;
         }
 
-        if(config.sendingEEPId == null || config.sendingEEPId.isEmpty()) {
+        if (config.sendingEEPId == null || config.sendingEEPId.isEmpty()) {
             configurationErrorDescription = "Sending EEP must be provided";
             return false;
         }
-
 
         try {
             sendingEEPType = EEPType.getType(getConfiguration().sendingEEPId);
@@ -125,17 +123,15 @@ public class EnOceanBaseActuatorHandler extends EnOceanBaseSensorHandler {
             configurationErrorDescription = "Sending EEP is not supported";
             return false;
         }
-        
+
         if (super.validateConfig()) {
             try {
-                
                 if (sendingEEPType.getSupportsRefresh()) {
                     if (getConfiguration().pollingInterval > 0) {
                         refreshJob = scheduler.scheduleWithFixedDelay(() -> {
                             try {
                                 refreshStates();
                             } catch (Exception e) {
-
                             }
                         }, 30, getConfiguration().pollingInterval, TimeUnit.SECONDS);
                     }
@@ -146,7 +142,6 @@ public class EnOceanBaseActuatorHandler extends EnOceanBaseSensorHandler {
                 } else {
                     destinationId = HexUtils.hexToBytes(config.enoceanId);
                 }
-
             } catch (Exception e) {
                 configurationErrorDescription = "Configuration is not valid";
                 return false;
@@ -163,26 +158,24 @@ public class EnOceanBaseActuatorHandler extends EnOceanBaseSensorHandler {
     }
 
     private boolean initializeIdForSending() {
-        // Generic things are treated as actuator things, however to support also generic sensors one can define a
-        // senderIdOffset of -1
-        // TODO: seperate generic actuators from generic sensors?
-        String thingTypeId = this.getThing().getThingTypeUID().getId();
-        String genericThingTypeId = THING_TYPE_GENERICTHING.getId();
-
-        if (getConfiguration().senderIdOffset == -1 && thingTypeId.equals(genericThingTypeId)) {
-            return true;
-        }
-
         EnOceanBridgeHandler bridgeHandler = getBridgeHandler();
         if (bridgeHandler == null) {
             return false;
         }
 
-        // if senderIdOffset is not set (=> defaults to -1) or set to -1, the next free senderIdOffset is determined
-        if (getConfiguration().senderIdOffset == -1) {
+        // Generic things are treated as actuator things, however to support also generic sensors one can omit
+        // senderIdOffset
+        // TODO: seperate generic actuators from generic sensors?
+        if ((getConfiguration().senderIdOffset == null
+                && THING_TYPE_GENERICTHING.equals(this.getThing().getThingTypeUID()))) {
+            return true;
+        }
+
+        // if senderIdOffset is not set, the next free senderIdOffset is determined
+        if (getConfiguration().senderIdOffset == null) {
             Configuration updateConfig = editConfiguration();
             getConfiguration().senderIdOffset = bridgeHandler.getNextSenderId(thing);
-            if (getConfiguration().senderIdOffset == -1) {
+            if (getConfiguration().senderIdOffset == null) {
                 configurationErrorDescription = "Could not get a free sender Id from Bridge";
                 return false;
             }
@@ -191,17 +184,14 @@ public class EnOceanBaseActuatorHandler extends EnOceanBaseSensorHandler {
         }
 
         byte[] baseId = bridgeHandler.getBaseId();
-        baseId[3] = (byte) ((baseId[3] & 0xFF) + getConfiguration().senderIdOffset);
+        baseId[3] = (byte) ((baseId[3] + getConfiguration().senderIdOffset) & 0xFF);
         this.senderId = baseId;
-
-        this.updateProperty(PROPERTY_ENOCEAN_ID, HexUtils.bytesToHex(this.senderId));
+        this.updateProperty(PROPERTY_SENDINGENOCEAN_ID, HexUtils.bytesToHex(this.senderId));
         bridgeHandler.addSender(getConfiguration().senderIdOffset, thing);
-
         return true;
     }
 
     private void refreshStates() {
-
         logger.debug("polling channels");
         if (thing.getStatus().equals(ThingStatus.ONLINE)) {
             for (Channel channel : this.getThing().getChannels()) {
@@ -211,8 +201,23 @@ public class EnOceanBaseActuatorHandler extends EnOceanBaseSensorHandler {
     }
 
     @Override
-    public void handleCommand(ChannelUID channelUID, Command command) {
+    protected void sendRequestResponse() {
+        sendMessage(VIRTUALCHANNEL_SEND_COMMAND, VIRTUALCHANNEL_SEND_COMMAND, OnOffType.ON, null);
+    }
 
+    protected void sendMessage(String channelId, String channelTypeId, Command command, Configuration channelConfig) {
+        EEP eep = EEPFactory.createEEP(sendingEEPType);
+        if (eep.convertFromCommand(channelId, channelTypeId, command, id -> getCurrentState(id), channelConfig)
+                .hasData()) {
+            BasePacket msg = eep.setSenderId(senderId).setDestinationId(destinationId)
+                    .setSuppressRepeating(getConfiguration().suppressRepeating).getERP1Message();
+
+            getBridgeHandler().sendMessage(msg, null);
+        }
+    }
+
+    @Override
+    public void handleCommand(ChannelUID channelUID, Command command) {
         // We must have a valid sendingEEPType and sender id to send commands
         if (sendingEEPType == null || senderId == null) {
             return;
@@ -245,18 +250,7 @@ public class EnOceanBaseActuatorHandler extends EnOceanBaseSensorHandler {
 
         try {
             Configuration channelConfig = channel.getConfiguration();
-
-            EEP eep = EEPFactory.createEEP(sendingEEPType);
-            if (eep.convertFromCommand(channelId, channelTypeId, command, id -> getCurrentState(id), channelConfig)
-                   .hasData()) {
-                ESP3Packet msg = eep.setSenderId(senderId)
-                                    .setDestinationId(destinationId)
-                                    .setSuppressRepeating(getConfiguration().suppressRepeating)
-                                    .getERP1Message();
-
-                getBridgeHandler().sendMessage(msg, null);
-            }
-
+            sendMessage(channelId, channelTypeId, command, channelConfig);
         } catch (IllegalArgumentException e) {
             logger.warn("Exception while sending telegram!", e);
         }
@@ -264,10 +258,15 @@ public class EnOceanBaseActuatorHandler extends EnOceanBaseSensorHandler {
 
     @Override
     public void handleRemoval() {
-        if (getConfiguration().senderIdOffset > 0) {
-            EnOceanBridgeHandler bridgeHandler = getBridgeHandler();
-            if (bridgeHandler != null) {
+
+        EnOceanBridgeHandler bridgeHandler = getBridgeHandler();
+        if (bridgeHandler != null) {
+            if (getConfiguration().senderIdOffset != null && getConfiguration().senderIdOffset > 0) {
                 bridgeHandler.removeSender(getConfiguration().senderIdOffset);
+            }
+
+            if (bridgeHandler.isSmackClient(this.thing)) {
+                logger.warn("Removing smack client (ThingId: {}) without teach out!", this.thing.getUID().getId());
             }
         }
 
