@@ -1,5 +1,5 @@
 /**
- * Copyright (c) 2010-2019 Contributors to the openHAB project
+ * Copyright (c) 2010-2021 Contributors to the openHAB project
  *
  * See the NOTICE file(s) distributed with this work for additional
  * information.
@@ -21,9 +21,8 @@ import java.util.Arrays;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.Objects;
 
-import org.apache.commons.lang.ObjectUtils;
-import org.apache.commons.lang.StringUtils;
 import org.openhab.binding.homematic.internal.misc.HomematicClientException;
 import org.openhab.binding.homematic.internal.misc.MiscUtils;
 import org.openhab.binding.homematic.internal.model.HmChannel;
@@ -64,7 +63,7 @@ public class DisplayTextVirtualDatapoint extends AbstractVirtualDatapointHandler
     private static final String BEEPCOUNT_END = "0x1D";
     private static final String BEEPINTERVAL_END = "0x16";
 
-    private static Map<String, String> replaceMap = new HashMap<String, String>();
+    private static Map<String, String> replaceMap = new HashMap<>();
 
     // replace special chars while encoding
     static {
@@ -321,16 +320,16 @@ public class DisplayTextVirtualDatapoint extends AbstractVirtualDatapointHandler
             HmChannel channel = dp.getChannel();
             boolean isEp = isEpDisplay(channel.getDevice());
 
-            List<String> message = new ArrayList<String>();
+            List<String> message = new ArrayList<>();
             message.add(START);
             if (isEp) {
                 message.add(LF);
             }
 
             for (int i = 1; i <= getLineCount(channel.getDevice()); i++) {
-                String line = ObjectUtils.toString(
-                        channel.getDatapoint(HmParamsetType.VALUES, DATAPOINT_NAME_DISPLAY_LINE + i).getValue());
-                if (StringUtils.isEmpty(line)) {
+                String line = Objects.toString(
+                        channel.getDatapoint(HmParamsetType.VALUES, DATAPOINT_NAME_DISPLAY_LINE + i).getValue(), "");
+                if (line.isEmpty()) {
                     line = " ";
                 }
                 message.add(LINE);
@@ -340,12 +339,12 @@ public class DisplayTextVirtualDatapoint extends AbstractVirtualDatapointHandler
                             .getOptionValue();
                     message.add(COLOR);
                     String colorCode = Color.getCode(color);
-                    message.add(StringUtils.isBlank(colorCode) ? Color.WHITE.getCode() : colorCode);
+                    message.add(colorCode == null || colorCode.isBlank() ? Color.WHITE.getCode() : colorCode);
                 }
                 String icon = channel.getDatapoint(HmParamsetType.VALUES, DATAPOINT_NAME_DISPLAY_ICON + i)
                         .getOptionValue();
                 String iconCode = Icon.getCode(icon);
-                if (StringUtils.isNotBlank(iconCode)) {
+                if (iconCode != null && !iconCode.isBlank()) {
                     message.add(ICON);
                     message.add(iconCode);
                 }
@@ -374,7 +373,7 @@ public class DisplayTextVirtualDatapoint extends AbstractVirtualDatapointHandler
             message.add(STOP);
 
             gateway.sendDatapoint(channel.getDatapoint(HmParamsetType.VALUES, DATAPOINT_NAME_SUBMIT),
-                    new HmDatapointConfig(), StringUtils.join(message, ","), null);
+                    new HmDatapointConfig(), String.join(",", message), null);
         }
     }
 
