@@ -1,5 +1,5 @@
 /**
- * Copyright (c) 2010-2019 Contributors to the openHAB project
+ * Copyright (c) 2010-2021 Contributors to the openHAB project
  *
  * See the NOTICE file(s) distributed with this work for additional
  * information.
@@ -14,7 +14,6 @@ package org.openhab.binding.mqtt.generic;
 
 import java.nio.charset.StandardCharsets;
 import java.util.ArrayList;
-import java.util.Formatter;
 import java.util.IllegalFormatException;
 import java.util.List;
 import java.util.concurrent.CompletableFuture;
@@ -22,15 +21,16 @@ import java.util.concurrent.ScheduledExecutorService;
 import java.util.concurrent.ScheduledFuture;
 import java.util.concurrent.TimeUnit;
 
-import org.apache.commons.lang.StringUtils;
 import org.eclipse.jdt.annotation.NonNullByDefault;
 import org.eclipse.jdt.annotation.Nullable;
-import org.eclipse.smarthome.core.thing.ChannelUID;
-import org.eclipse.smarthome.core.types.Command;
-import org.eclipse.smarthome.core.types.TypeParser;
-import org.eclipse.smarthome.io.transport.mqtt.MqttBrokerConnection;
-import org.eclipse.smarthome.io.transport.mqtt.MqttMessageSubscriber;
+import org.openhab.binding.mqtt.generic.values.TextValue;
 import org.openhab.binding.mqtt.generic.values.Value;
+import org.openhab.core.io.transport.mqtt.MqttBrokerConnection;
+import org.openhab.core.io.transport.mqtt.MqttMessageSubscriber;
+import org.openhab.core.library.types.StringType;
+import org.openhab.core.thing.ChannelUID;
+import org.openhab.core.types.Command;
+import org.openhab.core.types.TypeParser;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
@@ -53,14 +53,14 @@ public class ChannelState implements MqttMessageSubscriber {
     protected final Value cachedValue;
 
     // Runtime variables
-    @Nullable
-    private MqttBrokerConnection connection;
+    private @Nullable MqttBrokerConnection connection;
     protected final List<ChannelStateTransformation> transformationsIn = new ArrayList<>();
     protected final List<ChannelStateTransformation> transformationsOut = new ArrayList<>();
     private @Nullable ChannelStateUpdateListener channelStateUpdateListener;
     protected boolean hasSubscribed = false;
     private @Nullable ScheduledFuture<?> scheduledFuture;
-    private CompletableFuture<@Nullable Void> future = new CompletableFuture<>();
+    private CompletableFuture<@Nullable Void> future = CompletableFuture.completedFuture(null);
+    private final Object futureLock = new Object();
 
     /**
      * Creates a new channel state.
@@ -77,7 +77,7 @@ public class ChannelState implements MqttMessageSubscriber {
         this.channelStateUpdateListener = channelStateUpdateListener;
         this.channelUID = channelUID;
         this.cachedValue = cachedValue;
-        this.readOnly = StringUtils.isBlank(config.commandTopic);
+        this.readOnly = config.commandTopic.isBlank();
     }
 
     public boolean isReadOnly() {
@@ -159,8 +159,7 @@ public class ChannelState implements MqttMessageSubscriber {
             if (transformedValue != null) {
                 strValue = transformedValue;
             } else {
-                logger.debug("Transformation '{}' returned null on '{}', discarding message", strValue,
-                        t.serviceName);
+                logger.debug("Transformation '{}' returned null on '{}', discarding message", strValue, t.serviceName);
                 receivedOrTimeout();
                 return;
             }
@@ -188,12 +187,12 @@ public class ChannelState implements MqttMessageSubscriber {
             return;
         }
 
-        // Map the string to an ESH command, update the cached value and post the command to the framework
+        // Map the string to a command, update the cached value and post the command to the framework
         try {
             cachedValue.update(command);
         } catch (IllegalArgumentException | IllegalStateException e) {
-            logger.warn("Command '{}' not supported by type '{}': {}", strValue, cachedValue.getClass().getSimpleName(),
-                    e.getMessage());
+            logger.warn("Command '{}' from channel '{}' not supported by type '{}': {}", strValue, channelUID,
+                    cachedValue.getClass().getSimpleName(), e.getMessage());
             receivedOrTimeout();
             return;
         }
@@ -242,7 +241,7 @@ public class ChannelState implements MqttMessageSubscriber {
      */
     public CompletableFuture<@Nullable Void> stop() {
         final MqttBrokerConnection connection = this.connection;
-        if (connection != null && StringUtils.isNotBlank(config.stateTopic)) {
+        if (connection != null && !config.stateTopic.isBlank()) {
             return connection.unsubscribe(config.stateTopic, this).thenRun(this::internalStop);
         } else {
             internalStop();
@@ -288,17 +287,21 @@ public class ChannelState implements MqttMessageSubscriber {
      */
     public CompletableFuture<@Nullable Void> start(MqttBrokerConnection connection, ScheduledExecutorService scheduler,
             int timeout) {
-        if (hasSubscribed) {
-            return CompletableFuture.completedFuture(null);
+        synchronized (futureLock) {
+            // if the connection is still the same, the subscription is still present, otherwise we need to renew
+            if ((hasSubscribed || !future.isDone()) && connection.equals(this.connection)) {
+                return future;
+            }
+            hasSubscribed = false;
+
+            this.connection = connection;
+
+            if (config.stateTopic.isBlank()) {
+                return CompletableFuture.completedFuture(null);
+            }
+
+            this.future = new CompletableFuture<>();
         }
-
-        this.connection = connection;
-
-        if (StringUtils.isBlank(config.stateTopic)) {
-            return CompletableFuture.completedFuture(null);
-        }
-
-        this.future = new CompletableFuture<>();
         connection.subscribe(config.stateTopic, this).thenRun(() -> {
             hasSubscribed = true;
             logger.debug("Subscribed channel {} to topic: {}", this.channelUID, config.stateTopic);
@@ -330,7 +333,7 @@ public class ChannelState implements MqttMessageSubscriber {
     public CompletableFuture<Boolean> publishValue(Command command) {
         cachedValue.update(command);
 
-        String mqttCommandValue = cachedValue.getMQTTpublishValue();
+        Value mqttCommandValue = cachedValue;
 
         final MqttBrokerConnection connection = this.connection;
 
@@ -350,9 +353,12 @@ public class ChannelState implements MqttMessageSubscriber {
 
         // Outgoing transformations
         for (ChannelStateTransformation t : transformationsOut) {
-            String transformedValue = t.processValue(mqttCommandValue);
+            String commandString = mqttCommandValue.getMQTTpublishValue(null);
+            String transformedValue = t.processValue(commandString);
             if (transformedValue != null) {
-                mqttCommandValue = transformedValue;
+                Value textValue = new TextValue();
+                textValue.update(new StringType(transformedValue));
+                mqttCommandValue = textValue;
             } else {
                 logger.debug("Transformation '{}' returned null on '{}', discarding message", mqttCommandValue,
                         t.serviceName);
@@ -360,18 +366,23 @@ public class ChannelState implements MqttMessageSubscriber {
             }
         }
 
+        String commandString;
+
         // Formatter: Applied before the channel state value is published to the MQTT broker.
         if (config.formatBeforePublish.length() > 0) {
-            try (Formatter formatter = new Formatter()) {
-                Formatter format = formatter.format(config.formatBeforePublish, mqttCommandValue);
-                mqttCommandValue = format.toString();
+            try {
+                commandString = mqttCommandValue.getMQTTpublishValue(config.formatBeforePublish);
             } catch (IllegalFormatException e) {
                 logger.debug("Format pattern incorrect for {}", channelUID, e);
+                commandString = mqttCommandValue.getMQTTpublishValue(null);
             }
+        } else {
+            commandString = mqttCommandValue.getMQTTpublishValue(null);
         }
 
-        // Send retained messages if this is a stateful channel
-        return connection.publish(config.commandTopic, mqttCommandValue.getBytes(), 1, config.retained);
+        int qos = (config.qos != null) ? config.qos : connection.getQos();
+
+        return connection.publish(config.commandTopic, commandString.getBytes(), qos, config.retained);
     }
 
     /**
@@ -401,5 +412,4 @@ public class ChannelState implements MqttMessageSubscriber {
     public void setConnection(MqttBrokerConnection connection) {
         this.connection = connection;
     }
-
 }
