@@ -1,5 +1,5 @@
 /**
- * Copyright (c) 2010-2019 Contributors to the openHAB project
+ * Copyright (c) 2010-2021 Contributors to the openHAB project
  *
  * See the NOTICE file(s) distributed with this work for additional
  * information.
@@ -14,29 +14,29 @@ package org.openhab.binding.openweathermap.internal.handler;
 
 import static org.openhab.binding.openweathermap.internal.OpenWeatherMapBindingConstants.*;
 
-import java.util.Collections;
+import java.util.List;
 import java.util.Set;
 import java.util.concurrent.ScheduledFuture;
 import java.util.concurrent.TimeUnit;
 
-import org.apache.commons.lang.StringUtils;
 import org.eclipse.jdt.annotation.NonNullByDefault;
 import org.eclipse.jdt.annotation.Nullable;
 import org.eclipse.jetty.client.HttpClient;
-import org.eclipse.smarthome.config.core.Configuration;
-import org.eclipse.smarthome.core.i18n.LocaleProvider;
-import org.eclipse.smarthome.core.thing.Bridge;
-import org.eclipse.smarthome.core.thing.ChannelUID;
-import org.eclipse.smarthome.core.thing.Thing;
-import org.eclipse.smarthome.core.thing.ThingStatus;
-import org.eclipse.smarthome.core.thing.ThingStatusDetail;
-import org.eclipse.smarthome.core.thing.ThingTypeUID;
-import org.eclipse.smarthome.core.thing.binding.BaseBridgeHandler;
-import org.eclipse.smarthome.core.thing.binding.ThingHandler;
-import org.eclipse.smarthome.core.types.Command;
-import org.eclipse.smarthome.core.types.RefreshType;
 import org.openhab.binding.openweathermap.internal.config.OpenWeatherMapAPIConfiguration;
 import org.openhab.binding.openweathermap.internal.connection.OpenWeatherMapConnection;
+import org.openhab.core.config.core.Configuration;
+import org.openhab.core.i18n.LocaleProvider;
+import org.openhab.core.thing.Bridge;
+import org.openhab.core.thing.ChannelUID;
+import org.openhab.core.thing.Thing;
+import org.openhab.core.thing.ThingStatus;
+import org.openhab.core.thing.ThingStatusDetail;
+import org.openhab.core.thing.ThingTypeUID;
+import org.openhab.core.thing.binding.BaseBridgeHandler;
+import org.openhab.core.thing.binding.ThingHandler;
+import org.openhab.core.thing.util.ThingHandlerHelper;
+import org.openhab.core.types.Command;
+import org.openhab.core.types.RefreshType;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
@@ -50,7 +50,7 @@ public class OpenWeatherMapAPIHandler extends BaseBridgeHandler {
 
     private final Logger logger = LoggerFactory.getLogger(OpenWeatherMapAPIHandler.class);
 
-    public static final Set<ThingTypeUID> SUPPORTED_THING_TYPES = Collections.singleton(THING_TYPE_WEATHER_API);
+    public static final Set<ThingTypeUID> SUPPORTED_THING_TYPES = Set.of(THING_TYPE_WEATHER_API);
 
     private static final long INITIAL_DELAY_IN_SECONDS = 15;
 
@@ -75,20 +75,19 @@ public class OpenWeatherMapAPIHandler extends BaseBridgeHandler {
         config = getConfigAs(OpenWeatherMapAPIConfiguration.class);
 
         boolean configValid = true;
-        if (StringUtils.trimToNull(config.getApikey()) == null) {
+        if (config.apikey.isBlank()) {
             updateStatus(ThingStatus.OFFLINE, ThingStatusDetail.CONFIGURATION_ERROR,
                     "@text/offline.conf-error-missing-apikey");
             configValid = false;
         }
-        int refreshInterval = config.getRefreshInterval();
-        if (refreshInterval < 10) {
+        int refreshInterval = config.refreshInterval;
+        if (refreshInterval < 1) {
             updateStatus(ThingStatus.OFFLINE, ThingStatusDetail.CONFIGURATION_ERROR,
                     "@text/offline.conf-error-not-supported-refreshInterval");
             configValid = false;
         }
-        String language = config.getLanguage();
-        if (language != null) {
-            language = StringUtils.trimToEmpty(language);
+        String language = config.language;
+        if (language != null && !(language = language.trim()).isEmpty()) {
             if (!OpenWeatherMapAPIConfiguration.SUPPORTED_LANGUAGES.contains(language.toLowerCase())) {
                 updateStatus(ThingStatus.OFFLINE, ThingStatusDetail.CONFIGURATION_ERROR,
                         "@text/offline.conf-error-not-supported-language");
@@ -109,7 +108,8 @@ public class OpenWeatherMapAPIHandler extends BaseBridgeHandler {
 
             updateStatus(ThingStatus.UNKNOWN);
 
-            if (refreshJob == null || refreshJob.isCancelled()) {
+            ScheduledFuture<?> localRefreshJob = refreshJob;
+            if (localRefreshJob == null || localRefreshJob.isCancelled()) {
                 logger.debug("Start refresh job at interval {} min.", refreshInterval);
                 refreshJob = scheduler.scheduleWithFixedDelay(this::updateThings, INITIAL_DELAY_IN_SECONDS,
                         TimeUnit.MINUTES.toSeconds(refreshInterval), TimeUnit.SECONDS);
@@ -120,9 +120,10 @@ public class OpenWeatherMapAPIHandler extends BaseBridgeHandler {
     @Override
     public void dispose() {
         logger.debug("Dispose OpenWeatherMap API handler '{}'.", getThing().getUID());
-        if (refreshJob != null && !refreshJob.isCancelled()) {
+        ScheduledFuture<?> localRefreshJob = refreshJob;
+        if (localRefreshJob != null && !localRefreshJob.isCancelled()) {
             logger.debug("Stop refresh job.");
-            if (refreshJob.cancel(true)) {
+            if (localRefreshJob.cancel(true)) {
                 refreshJob = null;
             }
         }
@@ -151,28 +152,36 @@ public class OpenWeatherMapAPIHandler extends BaseBridgeHandler {
     }
 
     private void determineBridgeStatus() {
-        ThingStatus status = ThingStatus.OFFLINE;
-        for (Thing thing : getThing().getThings()) {
-            if (ThingStatus.ONLINE.equals(thing.getStatus())) {
-                status = ThingStatus.ONLINE;
-                break;
+        ThingStatus status = ThingStatus.ONLINE;
+        List<Thing> childs = getThing().getThings();
+        if (!childs.isEmpty()) {
+            status = ThingStatus.OFFLINE;
+            for (Thing thing : childs) {
+                if (ThingStatus.ONLINE.equals(thing.getStatus())) {
+                    status = ThingStatus.ONLINE;
+                    break;
+                }
             }
         }
         updateStatus(status);
     }
 
     private void updateThings() {
-        ThingStatus status = ThingStatus.OFFLINE;
-        for (Thing thing : getThing().getThings()) {
-            if (ThingStatus.ONLINE.equals(updateThing((AbstractOpenWeatherMapHandler) thing.getHandler(), thing))) {
-                status = ThingStatus.ONLINE;
+        ThingStatus status = ThingStatus.ONLINE;
+        List<Thing> childs = getThing().getThings();
+        if (!childs.isEmpty()) {
+            status = ThingStatus.OFFLINE;
+            for (Thing thing : childs) {
+                if (ThingStatus.ONLINE.equals(updateThing((AbstractOpenWeatherMapHandler) thing.getHandler(), thing))) {
+                    status = ThingStatus.ONLINE;
+                }
             }
         }
         updateStatus(status);
     }
 
     private ThingStatus updateThing(@Nullable AbstractOpenWeatherMapHandler handler, Thing thing) {
-        if (handler != null && connection != null) {
+        if (handler != null && ThingHandlerHelper.isHandlerInitialized(handler) && connection != null) {
             handler.updateData(connection);
             return thing.getStatus();
         } else {
