@@ -1,5 +1,5 @@
 /**
- * Copyright (c) 2010-2019 Contributors to the openHAB project
+ * Copyright (c) 2010-2021 Contributors to the openHAB project
  *
  * See the NOTICE file(s) distributed with this work for additional
  * information.
@@ -17,14 +17,13 @@ import java.util.Collections;
 import java.util.Map;
 import java.util.Set;
 
-import org.apache.commons.lang.StringUtils;
-import org.eclipse.smarthome.config.discovery.AbstractDiscoveryService;
-import org.eclipse.smarthome.config.discovery.DiscoveryResult;
-import org.eclipse.smarthome.config.discovery.DiscoveryResultBuilder;
-import org.eclipse.smarthome.config.discovery.DiscoveryService;
-import org.eclipse.smarthome.core.thing.ThingTypeUID;
-import org.eclipse.smarthome.core.thing.ThingUID;
 import org.openhab.binding.orvibo.internal.OrviboBindingConstants;
+import org.openhab.core.config.discovery.AbstractDiscoveryService;
+import org.openhab.core.config.discovery.DiscoveryResult;
+import org.openhab.core.config.discovery.DiscoveryResultBuilder;
+import org.openhab.core.config.discovery.DiscoveryService;
+import org.openhab.core.thing.ThingTypeUID;
+import org.openhab.core.thing.ThingUID;
 import org.osgi.service.component.annotations.Component;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -39,7 +38,7 @@ import com.github.tavalin.s20.Socket;
  *
  * @author Daniel Walters - Initial contribution
  */
-@Component(service = DiscoveryService.class, immediate = true, configurationPid = "discovery.orvibo")
+@Component(service = DiscoveryService.class, configurationPid = "discovery.orvibo")
 public class SocketDiscoveryService extends AbstractDiscoveryService implements SocketDiscoveryListener {
 
     private final Logger logger = LoggerFactory.getLogger(SocketDiscoveryService.class);
@@ -102,7 +101,7 @@ public class SocketDiscoveryService extends AbstractDiscoveryService implements 
     private DiscoveryResult createDiscoveryResult(Socket socket) {
         ThingUID thingUID = getUID(socket);
         String label = socket.getLabel();
-        if (StringUtils.isBlank(label)) {
+        if (label == null || label.isBlank()) {
             label = "S20";
         }
         return DiscoveryResultBuilder.create(thingUID).withLabel(label)
@@ -118,5 +117,4 @@ public class SocketDiscoveryService extends AbstractDiscoveryService implements 
         DiscoveryResult discoveryResult = createDiscoveryResult(socket);
         thingDiscovered(discoveryResult);
     }
-
 }
