@@ -1,5 +1,5 @@
 /**
- * Copyright (c) 2010-2019 Contributors to the openHAB project
+ * Copyright (c) 2010-2021 Contributors to the openHAB project
  *
  * See the NOTICE file(s) distributed with this work for additional
  * information.
@@ -12,26 +12,24 @@
  */
 package org.openhab.binding.robonect.internal.model;
 
+import static org.junit.jupiter.api.Assertions.*;
+
 import java.nio.charset.StandardCharsets;
 
-import org.openhab.binding.robonect.internal.model.ModelParser;
-
-import org.junit.Before;
-import org.junit.Test;
-
-import static org.junit.Assert.*;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
 
 /**
  * The goal of this class is to test the model parser to make sure the structures
  * returned from the module can be handled.
- * 
+ *
  * @author Marco Meyer - Initial contribution
  */
 public class ModelParserTest {
 
     private ModelParser subject;
 
-    @Before
+    @BeforeEach
     public void setUp() {
         subject = new ModelParser();
     }
@@ -50,12 +48,12 @@ public class ModelParserTest {
         String correctModel = "{\"successful\": false, \"error_code\": 7, \"error_message\": \"Automower already stopped\"}";
         RobonectAnswer answer = subject.parse(correctModel, RobonectAnswer.class);
         assertFalse(answer.isSuccessful());
-        assertEquals(new Integer(7), answer.getErrorCode());
+        assertEquals(Integer.valueOf(7), answer.getErrorCode());
         assertEquals("Automower already stopped", answer.getErrorMessage());
 
         MowerInfo info = subject.parse(correctModel, MowerInfo.class);
         assertFalse(info.isSuccessful());
-        assertEquals(new Integer(7), info.getErrorCode());
+        assertEquals(Integer.valueOf(7), info.getErrorCode());
         assertEquals("Automower already stopped", info.getErrorMessage());
     }
 
@@ -101,17 +99,17 @@ public class ModelParserTest {
         assertEquals(28, mowerInfo.getHealth().getTemperature());
         assertEquals(32, mowerInfo.getHealth().getHumidity());
         // "health": { "temperature": 28, "humidity": 32 }
-        
     }
 
     @Test
     public void shouldParseISOEncodedStatusModel() {
-        byte[] responseBytesISO88591 = "{\"successful\": true, \"name\": \"Mein Automower\", \"status\": {\"status\": 7, \"stopped\": true, \"duration\": 192, \"mode\": 1, \"battery\": 95, \"hours\": 41}, \"timer\": {\"status\": 2}, \"error\" : {\"error_code\": 15, \"error_message\": \"Utanför arbetsområdet\", \"date\": \"02.05.2017\", \"time\": \"20:36:43\", \"unix\": 1493757403}, \"wlan\": {\"signal\": -75}}".getBytes(
-                StandardCharsets.ISO_8859_1);
-        MowerInfo mowerInfo = subject.parse(new String(responseBytesISO88591, StandardCharsets.ISO_8859_1), MowerInfo.class);
+        byte[] responseBytesISO88591 = "{\"successful\": true, \"name\": \"Mein Automower\", \"status\": {\"status\": 7, \"stopped\": true, \"duration\": 192, \"mode\": 1, \"battery\": 95, \"hours\": 41}, \"timer\": {\"status\": 2}, \"error\" : {\"error_code\": 15, \"error_message\": \"Utanför arbetsområdet\", \"date\": \"02.05.2017\", \"time\": \"20:36:43\", \"unix\": 1493757403}, \"wlan\": {\"signal\": -75}}"
+                .getBytes(StandardCharsets.ISO_8859_1);
+        MowerInfo mowerInfo = subject.parse(new String(responseBytesISO88591, StandardCharsets.ISO_8859_1),
+                MowerInfo.class);
         assertEquals("Utanför arbetsområdet", mowerInfo.getError().getErrorMessage());
     }
-    
+
     @Test
     public void shouldParseCorrectStatusModelWithErrorCode() {
         String correctModel = "{\"successful\": true, \"name\": \"Grasi\", \"status\": {\"status\": 7, \"stopped\": true, \"duration\": 423, \"mode\": 0, \"battery\": 83, \"hours\": 55}, \"timer\": {\"status\": 2, \"next\": {\"date\": \"15.05.2017\", \"time\": \"19:00:00\", \"unix\": 1494874800}}, \"wlan\": {\"signal\": -76}, \"error\": {\"error_code\": 9, \"error_message\": \"Grasi ist eingeklemmt\", \"date\": \"13.05.2017\", \"time\": \"23:00:22\", \"unix\": 1494716422}}";
@@ -133,7 +131,6 @@ public class ModelParserTest {
         assertEquals(MowerStatus.MOWING, mowerInfo.getStatus().getStatus());
         assertFalse(mowerInfo.getStatus().isStopped());
         assertEquals(MowerMode.MANUAL, mowerInfo.getStatus().getMode());
-
     }
 
     @Test
@@ -146,7 +143,7 @@ public class ModelParserTest {
         assertTrue(mowerInfo.getStatus().isStopped());
         assertNotNull(mowerInfo.getError());
         assertEquals("Mein Automower ist angehoben", mowerInfo.getError().getErrorMessage());
-        assertEquals(new Integer(15), mowerInfo.getError().getErrorCode());
+        assertEquals(Integer.valueOf(15), mowerInfo.getError().getErrorCode());
         assertEquals("02.05.2017", mowerInfo.getError().getDate());
         assertEquals("20:36:43", mowerInfo.getError().getTime());
         assertEquals("1493757403", mowerInfo.getError().getUnix());
@@ -158,7 +155,7 @@ public class ModelParserTest {
         ErrorList errorList = subject.parse(errorsListResponse, ErrorList.class);
         assertTrue(errorList.isSuccessful());
         assertEquals(10, errorList.getErrors().size());
-        assertEquals(new Integer(15), errorList.getErrors().get(0).getErrorCode());
+        assertEquals(Integer.valueOf(15), errorList.getErrors().get(0).getErrorCode());
         assertEquals("Grasi ist angehoben", errorList.getErrors().get(0).getErrorMessage());
         assertEquals("02.05.2017", errorList.getErrors().get(0).getDate());
         assertEquals("20:36:43", errorList.getErrors().get(0).getTime());
@@ -183,41 +180,17 @@ public class ModelParserTest {
         assertEquals("2017-03-25 20:10:00", versionInfo.getRobonect().getCompiled());
         assertEquals("V0.9c", versionInfo.getRobonect().getComment());
     }
-    
+
     @Test
-    public void shouldParseVersionInfoV1betaToNA(){
-        String versionResponse = "{\n" +
-                "mower: {\n" +
-                "hardware: {\n" +
-                "serial: 170602001,\n" +
-                "production: \"2017-02-07 15:12:00\"\n" +
-                "},\n" +
-                "msw: {\n" +
-                "title: \"420\",\n" +
-                "version: \"7.10.00\",\n" +
-                "compiled: \"2016-11-29 08:44:06\"\n" +
-                "},\n" +
-                "sub: {\n" +
-                "version: \"6.01.00\"\n" +
-                "}\n" +
-                "},\n" +
-                "serial: \"05D80037-39355548-43163930\",\n" +
-                "bootloader: {\n" +
-                "version: \"V0.4\",\n" +
-                "compiled: \"2016-10-22 01:12:00\",\n" +
-                "comment: \"\"\n" +
-                "},\n" +
-                "wlan: {\n" +
-                "at-version: \"V1.4.0\",\n" +
-                "sdk-version: \"V2.1.0\"\n" +
-                "},\n" +
-                "application: {\n" +
-                "version: \"V1.0\",\n" +
-                "compiled: \"2018-03-12 21:01:00\",\n" +
-                "comment: \"Release V1.0 Beta2\"\n" +
-                "},\n" +
-                "successful: true\n" +
-                "}";
+    public void shouldParseVersionInfoV1betaToNA() {
+        String versionResponse = "{\n" + "mower: {\n" + "hardware: {\n" + "serial: 170602001,\n"
+                + "production: \"2017-02-07 15:12:00\"\n" + "},\n" + "msw: {\n" + "title: \"420\",\n"
+                + "version: \"7.10.00\",\n" + "compiled: \"2016-11-29 08:44:06\"\n" + "},\n" + "sub: {\n"
+                + "version: \"6.01.00\"\n" + "}\n" + "},\n" + "serial: \"05D80037-39355548-43163930\",\n"
+                + "bootloader: {\n" + "version: \"V0.4\",\n" + "compiled: \"2016-10-22 01:12:00\",\n"
+                + "comment: \"\"\n" + "},\n" + "wlan: {\n" + "at-version: \"V1.4.0\",\n" + "sdk-version: \"V2.1.0\"\n"
+                + "},\n" + "application: {\n" + "version: \"V1.0\",\n" + "compiled: \"2018-03-12 21:01:00\",\n"
+                + "comment: \"Release V1.0 Beta2\"\n" + "},\n" + "successful: true\n" + "}";
         VersionInfo versionInfo = subject.parse(versionResponse, VersionInfo.class);
         assertTrue(versionInfo.isSuccessful());
         assertEquals("n/a", versionInfo.getRobonect().getSerial());
